--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -47,7 +47,8 @@
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="test@email.com" />
 
             <EditText
                 android:id="@+id/password"
@@ -59,7 +60,8 @@
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:text="Password" />
 
             <Button
                 android:id="@+id/sign_in_button"
