--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -4,11 +4,13 @@
     android:layout_height="match_parent"
     tools:context=".GameActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_kill"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:onClick="btn_kill_onclick"
+        android:text="KILL!" />
 
 </RelativeLayout>
