--- a/res/layout/activity_dashboard.xml
+++ b/res/layout/activity_dashboard.xml
@@ -1,11 +1,11 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/status_merge_layout"
+    android:id="@+id/dash_merge_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <ScrollView
-        android:id="@+id/status_scrollview"
+        android:id="@+id/dash_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".StatusActivity" >
@@ -16,40 +16,40 @@
             android:orientation="vertical" >
 
             <CheckBox
-                android:id="@+id/status_cb_bt"
+                android:id="@+id/dash_cb_bt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:text="Bluetooth" />
 
             <CheckBox
-                android:id="@+id/status_cb_disc"
+                android:id="@+id/dash_cb_disc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:text="Discoverable" />
 
             <CheckBox
-                android:id="@+id/status_cb_network"
+                android:id="@+id/dash_cb_network"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:text="Network Access" />
 
             <LinearLayout
-                android:id="@+id/status_loggedin_layout"
+                android:id="@+id/dash_loggedin_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
                 <CheckBox
-                    android:id="@+id/status_cb_logged_in"
+                    android:id="@+id/dash_cb_logged_in"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:enabled="false"
                     android:text="Logged In" />
 
                 <Button
-                    android:id="@+id/status_btn_log_in"
+                    android:id="@+id/dash_btn_log_in"
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
                     android:text="Log In" />
 
                 <Button
-                    android:id="@+id/status_btn_log_out"
+                    android:id="@+id/dash_btn_log_out"
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -67,15 +67,28 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/status_btn_kill"
+                android:id="@+id/dash_btn_kill"
                 android:layout_width="136dp"
                 android:layout_height="wrap_content"
                 android:text="Kill" />
+
+            <Button
+                android:id="@+id/dash_btn_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User Info" />
+
+            <Button
+                android:id="@+id/dash_btn_sync"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Synchronize" />
+
         </LinearLayout>
     </ScrollView>
 
     <LinearLayout
-        android:id="@+id/status_layout_loading"
+        android:id="@+id/dash_layout_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -89,7 +102,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/status_loading_msg"
+            android:id="@+id/dash_loading_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Medium Text"
