--- a/res/layout/activity_sign_up.xml
+++ b/res/layout/activity_sign_up.xml
@@ -1,75 +1,105 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sign_up_merge"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SignInActivity" >
+    android:layout_height="match_parent" >
+
+    <ScrollView
+        android:id="@+id/signup_layout_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".SignInActivity" >
+
+        <LinearLayout
+            android:id="@+id/signup_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <EditText
+                android:id="@+id/form_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Email address"
+                android:inputType="textEmailAddress"
+                android:tag="email" />
+
+            <EditText
+                android:id="@+id/form_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:tag="password" />
+
+            <EditText
+                android:id="@+id/form_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="First Name"
+                android:inputType="textPersonName"
+                android:tag="first_name" >
+
+                
+            </EditText>
+
+            <EditText
+                android:id="@+id/form_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Last Name"
+                android:inputType="textPersonName"
+                android:tag="last_name" />
+
+            <TextView
+                android:id="@+id/signup_education_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/signup_education_hint" />
+
+            <Spinner
+                android:id="@+id/form_educations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/educations"
+                android:tag="education" />
+
+            <Button
+                android:id="@+id/form_submit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onSubmitClicked"
+                android:text="Submit" />
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
-        android:id="@+id/signup_layout"
+        android:id="@+id/signup_status"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone" >
 
-        <EditText
-            android:id="@+id/form_first_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="First Name"
-            android:inputType="textPersonName"
-            android:tag="first_name" >
-
-            <requestFocus />
-        </EditText>
-
-        <EditText
-            android:id="@+id/form_last_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Last Name"
-            android:inputType="textPersonName"
-            android:tag="last_name" />
-
-        <TextView
-            android:id="@+id/signup_education_hint"
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/signup_education_hint" />
+            android:layout_marginTop="-50dp" />
 
-        <Spinner
-            android:id="@+id/form_educations"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/signup_status_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:entries="@array/educations"
-            android:tag="education" />
-
-        <EditText
-            android:id="@+id/form_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:tag="password" />
-
-        <EditText
-            android:id="@+id/form_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Email address"
-            android:inputType="textEmailAddress"
-            android:tag="email" />
-
-        <Button
-            android:id="@+id/form_submit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="onSubmitClicked"
-            android:text="Submit" />
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
 
-</ScrollView>
+</merge>
